workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/RespostaDeclaracaoSaude__c.object-meta.xml
<CustomObject>
    <label>Resposta da Declaração de Saúde</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da resposta da declaração de saúde</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas da Declaração de Saúde</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>