workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/fields/DeclaraoSaude__c.field-meta.xml
<CustomField>
    <fullName>DeclaraoSaude__c</fullName>
    <label>Declaração de saúde</label>
    <referenceTo>DeclaracaoSaude__c</referenceTo>
    <relationshipName>DeclaracaoSaude</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>