workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/fields/Justificativapergunta__c.field-meta.xml
<CustomField>
    <fullName>Justificativapergunta__c</fullName>
    <label>Justificativa da pergunta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>