workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/fields/PerguntaQuestionarioRisco__c.field-meta.xml
<CustomField>
    <fullName>PerguntaQuestionarioRisco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pergunta</label>
    <referenceTo>PerguntaQuestionario__c</referenceTo>
    <relationshipName>RespostaDeclaracaoSaude</relationshipName>
    <type>Lookup</type>
</CustomField>