workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/fields/QuestionName__c.field-meta.xml
<CustomField>
    <fullName>QuestionName__c</fullName>
    <formula>PerguntaQuestionarioRisco__r.Pergunta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Pergunta</label>
    <type>Text</type>
</CustomField>