workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/fields/Resposta__c.field-meta.xml
<CustomField>
    <fullName>Resposta__c</fullName>
    <label>Resposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>