workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/fields/TipoDadoResposta__c.field-meta.xml
<CustomField>
    <fullName>TipoDadoResposta__c</fullName>
    <formula>PerguntaQuestionarioRisco__r.TipoDadoResposta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de dado da resposta</label>
    <type>Text</type>
</CustomField>