workspace-sf/force-app/main/default/objects/RespostaDeclaracaoSaude__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PerguntaQuestionarioRisco__c</columns>
    <columns>QuestionName__c</columns>
    <columns>Resposta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>